...
    return SlideTransition(
      position: _animasiSlide,
      child: FadeTransition(
        opacity: _animasiFade,
        child: LoadingButton(
          isLoading: _isLoading,
          text: 'Masuk',
          onPressed: _prosesLogin,
          backgroundColor: Colors.blue[800]!,
          textColor: Colors.white,
        ),
      ),
    );
...
